Update project description in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pestilent-lieutenant",
   "version": "1.2.4",
-  "description": "I'll pour this pestilence into his ear",
+  "description": "Will I turn her virtue into pitch",
   "main": "index.js",
   "repository": {
     "type": "git",
